feat(service): use UrlValidator to validate URLs and add normalization to ASCII with IDN
Replaced the previous URL validation implementation with the more reliable UrlValidator from Apache Commons, and now all URLs are normalized with IDN before storing in the database.